--- a/Practica_1/Ejercicio_5/index.html
+++ b/Practica_1/Ejercicio_5/index.html
@@ -13,16 +13,8 @@
   </head>
   <body>
     <div class="container">
-      <div class="row">
-        <img id="imgId" src="img/index.jpeg" alt="img">
-      </div>
-      <div class="row">
-        <button type="button" name="showButton" id="showButtonId" class="btn btn-primary" btn-lg btn-block>Show Image</button>
-        <button type="button" name="hideButton" id="hideButtonId" class="btn btn-primary" btn-lg btn-block>Hide Image</button>
-      </div>
+      <p class="mt-3">Este párrafo cambiará de tamaño al pasar el ratón por encima</p>
     </div>
-    
-    
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
