--- a/Practica_1/Ejercicio_6/index.html
+++ b/Practica_1/Ejercicio_6/index.html
@@ -6,23 +6,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- SCRIPT -->
-    <script type="text/javascript" src="codigo.js" defer></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <img id="imgId" src="img/index.jpeg" alt="img">
-      </div>
-      <div class="row">
-        <button type="button" name="showButton" id="showButtonId" class="btn btn-primary" btn-lg btn-block>Show Image</button>
-        <button type="button" name="hideButton" id="hideButtonId" class="btn btn-primary" btn-lg btn-block>Hide Image</button>
-      </div>
-    </div>
-    
-    
+    <button class="btn-info">Click here!</button>
+    <img src="img/index.jpeg" alt="img">
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
