--- a/Practica_1/Ejercicio_2(Hecho)/index.html
+++ b/Practica_1/Ejercicio_2(Hecho)/index.html
@@ -10,6 +10,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
-    
+    <div class="container">
+      <div class="row">
+        <img id="imgId" src="img/index.jpeg" alt="img">
+      </div>
+      <div class="row">
+        <button type="button" name="showButton" id="showButtonId" class="btn btn-primary" btn-lg btn-block>Show Image</button>
+        <button type="button" name="hideButton" id="hideButtonId" class="btn btn-primary" btn-lg btn-block>Hide Image</button>
+      </div>
+    </div>
   </body>
 </html>
