--- a/Practica_1/Ejercicio_3/index.html
+++ b/Practica_1/Ejercicio_3/index.html
@@ -1,33 +1,26 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>AJAX E1</title>
+    <title></title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- SCRIPT -->
-    <script type="text/javascript" src="codigo.js" defer></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script type="text/javascript" src="codigo.js"></script>
   </head>
   <body>
     <div class="container">
-      <div class="row">
-        <img id="imgId" src="img/index.jpeg" alt="img">
-      </div>
-      <div class="row">
-        <button type="button" name="showButton" id="showButtonId" class="btn btn-primary" btn-lg btn-block>Show Image</button>
-        <button type="button" name="hideButton" id="hideButtonId" class="btn btn-primary" btn-lg btn-block>Hide Image</button>
-      </div>
-    </div>
-    
-    
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+      <div class="form-check form-check-inline">
+        <label class="form-check-label">
+          <input class="form-check-input" type="radio" name="colors" id="colors1" value="red"> Red
+          <input class="form-check-input" type="radio" name="colors" id="colors2" value="blue"> Blue
+          <input class="form-check-input" type="radio" name="colors" id="colors3" value="green"> Green
+        </label>
+      </div>
+
+      <p>Este párrafo cambiará de color según el valor del radio seleccionado.</p>
+    </div>
   </body>
 </html>
