--- a/Practica_1/Ejercicio_4/index.html
+++ b/Practica_1/Ejercicio_4/index.html
@@ -10,6 +10,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
-    
+    <form name="myForm" id="myFormId">
+      Number 1: <input type="text" name="inputNumber1" id="inputNumber1Id" placeholder="Introduce un numero">
+      Number 2: <input type="text" name="inputNumber2" id="inputNumber2Id" placeholder="Introduce un numero">
+      Mostrar Resultado <input type="checkbox" name="mostrarResultado" id="mostrarResultadoId">
+    </form>
   </body>
 </html>
