--- a/Practica_1/Ejercicio_1(Hecho)/index.html
+++ b/Practica_1/Ejercicio_1(Hecho)/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- SCRIPT -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type="text/javascript" src="codigo.js"></script>
+    <script type="text/javascript" src="codigo.js" defer></script>
   </head>
   <body>
-    <div class="capa1">Primera capa del documento</div>
-    <div class="capa2">Segunda capa del documento</div>
-    <div class="capa3">Tercera capa del documento</div>
+    <div>Primera capa del documento</div>
+    <div>Segunda capa del documento</div>
+    <div>Tercera capa del documento</div>
   </body>
 </html>
