Practica_4, exercise1-3 completed

--- a/Practica_4/Ejercicio_1/index.html
+++ b/Practica_4/Ejercicio_1/index.html
@@ -13,8 +13,14 @@
   </head>
   <body>
     <div class="container">
-      <div id="content"></div>
-      <button type="button" class="btn btn-primary">Mostrar fichero de texto</button>
+      <img src="gif/index.png" alt="img" id="imgId">
+      <button type="button" class="btn btn-primary" id="buttonShow">show</button>
+      <button type="button" class="btn btn-primary" id="buttonHide">hide</button>
+      <button type="button" class="btn btn-primary" id="buttonFadeIn">FadeIn</button>
+      <button type="button" class="btn btn-primary" id="buttonFadeOut">FadeOut</button>
+      <button type="button" class="btn btn-primary" id="buttonSlideDown">slideDown</button>
+      <button type="button" class="btn btn-primary" id="buttonSlideUp">slideUp</button>
+      <button type="button" class="btn btn-primary" id="buttonSlideToggle">SlideToggle</button>
     </div>
 
     <!-- Optional JavaScript -->
