--- a/Practica_4/Ejercicio_2/index.html
+++ b/Practica_4/Ejercicio_2/index.html
@@ -13,10 +13,11 @@
   </head>
   <body>
     <div class="container">
-      <div id="content">
-        <img src="./gif/loading.gif" id="loadingImage" style="display: none;"/>
+      <div class="content p-4">
+        <p class="content-p">Bienvenidos a la aplicación</p>
       </div>
-      <button type="button" class="btn btn-primary">Mostrar fichero hora</button>
+      <button type="button" class="btn btn-primary" id="buttonGreet">Saludo</button>
+      <button type="button" class="btn btn-primary" id="buttonFarewell">Despedida</button>
     </div>
 
     <!-- Optional JavaScript -->
