--- a/Practica_4/Ejercicio_3/index.html
+++ b/Practica_4/Ejercicio_3/index.html
@@ -13,9 +13,18 @@
   </head>
   <body>
     <div class="container">
-      <div id="content">
-      </div>
-      <button type="button" class="btn btn-primary">Mostrar fichero hora</button>
+      <section class="content">
+        <div id="cube">
+          <figure class="back"></figure>
+          <figure class="left"></figure>
+          <figure class="bottom"></figure>
+          <figure class="front"></figure>
+          <figure class="right"></figure>
+          <figure class="top"></figure>
+        </div>
+      </section>
+      <button type="button" class="btn btn-primary" id="stopEfect">Para efecto</button>
+      <button type="button" class="btn btn-primary" id="initEfect">Iniciar efecto</button>
     </div>
 
     <!-- Optional JavaScript -->
