--- a/Practica_4/Ejercicio_4/index.html
+++ b/Practica_4/Ejercicio_4/index.html
@@ -13,17 +13,10 @@
   </head>
   <body>
     <div class="container">
-      <form id="loginForm">
-        <div class="form-group">
-          <label for="lEmail">
-            <input type="text" class="form-control" name="IEmail" id="IEmailId" aria-describedby="emailHelpId" placeholder="Email">
-          </label>
-          <label for="lEmail">
-            <input type="password" class="form-control" name="IPassword" id="IPasswordId" aria-describedby="passwordHelpId" placeholder="Password">
-          </label>
-          <button type="submit" class="btn btn-primary">Login</button>
-        </div>
-      </form>
+      <a href="#"><h1>Some Header Text 2</h1></a>
+      <a href="#"><h1>Some Header Text3</h1></a>
+      <a href="#"><h1>Some Header Text4</h1></a>
+      <a href="#"><h1>Some Header Text5</h1></a>
     </div>
 
     <!-- Optional JavaScript -->
