--- a/Practica_4/Ejercicio_5/index.html
+++ b/Practica_4/Ejercicio_5/index.html
@@ -13,7 +13,10 @@
   </head>
   <body>
     <div class="container">
-      <div id="content"></div>
+      <div id="content">
+        <img src="./gif/loading.gif" id="loadingImage" style="display: none;"/>
+      </div>
+      <button type="button" class="btn btn-primary">Mostrar fichero hora</button>
     </div>
 
     <!-- Optional JavaScript -->
