--- a/Practica_4/Ejercicio_4/index.html
+++ b/Practica_4/Ejercicio_4/index.html
@@ -13,10 +13,11 @@
   </head>
   <body>
     <div class="container">
-      <a href="#"><h1>Some Header Text 2</h1></a>
-      <a href="#"><h1>Some Header Text3</h1></a>
-      <a href="#"><h1>Some Header Text4</h1></a>
-      <a href="#"><h1>Some Header Text5</h1></a>
+      <h1>h</h1>
+      <h1>h</h1>
+      <h1>h</h1>
+      <h1>h</h1>
+      <button type="button" class="btn btn-primary" id="initEfect">Iniciar efecto</button>
     </div>
 
     <!-- Optional JavaScript -->
