--- a/Practica_5/Ejercicio_3/index.html
+++ b/Practica_5/Ejercicio_3/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>JQUERY-AJAX ANEX E2</title>
+    <title>JQUERY-AJAX ANEX E1</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,11 +13,8 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hola</h1>
-      <h1>Hola</h1>
-      <h1>Hola</h1>
-      <h1>Hola</h1>
-      <h1>Hola</h1>
+      <div id="content"></div>
+      <button class="btn" id="mergeButton">Button Merge</button>
     </div>
 
     <!-- Optional JavaScript -->
