--- a/Practica_5/Ejercicio_4/index.html
+++ b/Practica_5/Ejercicio_4/index.html
@@ -1,28 +1,33 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>JQUERY-AJAX ANEX E2</title>
+    <title>JQUERY-AJAX ANEX E1</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- SCRIPT -->
     <script type="text/javascript" src="codigo.js" defer></script>
+    <!-- Plugin carousel styles -->
+    <link rel="stylesheet" href="./carousel/slick-theme.css">
+    <link rel="stylesheet" href="./carousel/slick.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="styles.css"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-    <div class="container">
-      <h1>Hola</h1>
-      <h1>Hola</h1>
-      <h1>Hola</h1>
-      <h1>Hola</h1>
-      <h1>Hola</h1>
+    <div class="slider demo">
+      <div><img src="img/1.jpg" alt="1" height="500" width="1000"></div>
+      <div><img src="img/2.jpeg" alt="2" height="500" width="1000"></div>
+      <div><img src="img/3.jpg" alt="3" height="500" width="1000"></div>
+      <div><img src="img/4.jpg" alt="4" height="500" width="1000"></div>
+      <div><img src="img/5.jpg" alt="5" height="500" width="1000"></div>
+      <div><img src="img/6.jpg" alt="6" height="500" width="1000"></div>
     </div>
-
+    <!-- DOC https://www.jqueryscript.net/slider/Fully-Responsive-Flexible-jQuery-Carousel-Plugin-slick.html -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="carousel/slick.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
