--- a/Practica_3/Ejercicio_2/index.html
+++ b/Practica_3/Ejercicio_2/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <div id="content">
-        <img src="./gif/loading.gif" id="loadingImage" style="display: none;"/>
+        <img src="./gif/200.gif" id="loadingImage" style="display: none;"/>
       </div>
       <button type="button" class="btn btn-primary">Mostrar fichero hora</button>
     </div>
